[project]
name = "bober-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fake-useragent>=2.2.0",
    "pycraft",
    "pystyle>=2.9",
    "requests>=2.32.3",
]

[tool.uv.sources]
pycraft = { git = "https://github.com/ammaraskar/pyCraft" }
